--- a/python/trainer_config.yaml
+++ b/python/trainer_config.yaml
@@ -166,8 +166,23 @@ StudentBrain:
     buffer_size: 128
 
 PepperBrain:
-    max_steps: 5.0e7
-    batch_size: 512
-    learning_rate: 5.0e-5
+    max_steps: 30e5
+    batch_size: 2048
+    learning_rate: 1e-4
     use_recurrent: true
+    hidden_units: 512
     num_layers: 3
+    gamma: 0.99
+    normalize: true
+    beta: 1.0e-3
+    
+PepperVisualBrain:
+    max_steps: 30e5
+    batch_size: 256
+    learning_rate: 1e-6
+    use_recurrent: true
+    hidden_units: 512
+    num_layers: 3
+    gamma: 0.99
+    normalize: true
+    beta: 1.0e-3
