Set up the ff-version of this experiment

--- a/python/trainer_config.yaml
+++ b/python/trainer_config.yaml
@@ -169,13 +169,13 @@ PepperBrain:
     max_steps: 30e5
     batch_size: 2048
     learning_rate: 1e-4
-    use_recurrent: true
+    use_recurrent: false
     hidden_units: 512
     num_layers: 3
     gamma: 0.99
     normalize: true
     beta: 1.0e-3
-    
+
 PepperVisualBrain:
     max_steps: 30e5
     batch_size: 256
