Set up the ff-version of this experiment

--- a/python/trainer_config.yaml
+++ b/python/trainer_config.yaml
@@ -169,7 +169,7 @@ PepperBrain:
     max_steps: 30e5
     batch_size: 256
     learning_rate: 1e-7
-    use_recurrent: true
+    use_recurrent: false
     hidden_units: 512
     num_layers: 3
     gamma: 0.99
