Added a branch for this experiment

--- a/python/trainer_config.yaml
+++ b/python/trainer_config.yaml
@@ -180,7 +180,7 @@ PepperVisualBrain:
     max_steps: 30e5
     batch_size: 256
     learning_rate: 1e-6
-    use_recurrent: true
+    use_recurrent: false
     hidden_units: 512
     num_layers: 3
     gamma: 0.99
